correcting my code x3